objects/Contract_Invoice_Line__c.object
<CustomObject>
    <description>One or more lines that make up the Invoice Request</description>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <formula>TEXT( Contract_Line_ID__r.Billing_Frequency__c )</formula>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Friendly_Name__c</fullName>
        <description>Formula Modified as per part of Story SSE-17005 : DEB (expenses) DO NOT show as a separate line</description>
        <formula>if(UPPER(SUN_IM_lookup_code__c) = &apos;X10ADMIN&apos;, &apos;ADMINFEE&apos;,
					if(UPPER(SUN_IM_lookup_code__c) = &apos;DEB&apos;, &apos;Expenses&apos;,
							if(UPPER(SUN_IM_lookup_code__c) = &apos;FREIGHT&apos;, &apos;Freight&apos;	,Order_Product_Id__r.Client_Friendly_Name__c)))</formula>
        <label>Client Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Line_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line ID (Legacy)</label>
        <referenceTo>Contract_Line__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Price__c</fullName>
        <description>Price from Contract Line</description>
        <formula>Order_Product_Id__r.Quantity * Order_Product_Id__r.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Number_From_Invoice_Header__c</fullName>
        <description>Contract Number from the Contract that is on the Invoice Header</description>
        <formula>Invoice_Header_ID__r.Order__r.OrderNumber</formula>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Invoice_Line_Total__c</fullName>
        <formula>Invoice_Line_Total__c - Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice line total minus new discount number value</inlineHelpText>
        <label>Discounted Invoice Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discounted__c</fullName>
        <formula>Discount_Amount__c / Invoice_Line_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Discounted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IM_Lookup_Code_For_Filter__c</fullName>
        <description>this field is used to filter the rollup field</description>
        <label>IM Lookup Code For Filter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Lookup_Code__c</fullName>
        <description>IM Lookup Code from Contract Line</description>
        <formula>Order_Product_Id__r.Product2.StockKeepingUnit</formula>
        <label>IM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Header_ID__c</fullName>
        <label>Invoice Header ID</label>
        <referenceTo>Contract_Invoice_Header__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Total__c</fullName>
        <label>Invoice Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsAutoCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutoCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <description>Holds the Invoice Line price (i.e. if override price is non-zero it will hold that price else it will hold the Contract Line price)</description>
        <formula>IF((Price__c &lt;&gt; 0), Price__c, Contract_Line_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Description_From_Contract_Line__c</fullName>
        <description>Line Description from Contract Line</description>
        <formula>Contract_Line_ID__r.Line_Description__c</formula>
        <label>Line Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <inlineHelpText>Total of Quantity * Price</inlineHelpText>
        <label>Line_Total</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <label>Order Product &amp; Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product &amp; Service Id</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_product_services_name__c</fullName>
        <formula>Order_Product_Id__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order product &amp; services name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number_From_Contract_Line__c</fullName>
        <description>PO Number from Contract Line</description>
        <formula>Contract_Line_ID__r.PO_number__c</formula>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Reference__c</fullName>
        <inlineHelpText>Purchase Order Reference (max 18 characters)</inlineHelpText>
        <label>PO Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Price_Calculated__c</fullName>
        <inlineHelpText>If Product is &apos;In Advance&apos;/&apos;In arrears&apos; then it will represent price per units, otherwise its a price per product billing frequency.</inlineHelpText>
        <label>Price Per (Billing Frequency OR Unit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Price__c</fullName>
        <formula>IF(  ISBLANK( Total_Equivalent_Units__c )  ,0,  Order_Product_Id__r.Total_Price__c  /  Total_Equivalent_Units__c )</formula>
        <label>Per-Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceCaculated__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_From_Contract_Line__c</fullName>
        <description>Price Per from Contract Line e.g. where price quoted is per Applicant or Sitting etc</description>
        <formula>TEXT( Order_Product_Id__r.Basis_of_Fees__c )</formula>
        <label>Price Per</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Only enter a price if you wish to override the calculated price</inlineHelpText>
        <label>Override Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductStream_SystemUse__c</fullName>
        <label>Product Stream (System Use Only)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityFromOrderProduct__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Only enter a quantity if you wish to change the calculated quantity</inlineHelpText>
        <label>Override Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUN_IM_lookup_code__c</fullName>
        <label>IM Lookup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <formula>TEXT(Invoice_Header_ID__r.Sales_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <formula>TEXT(Order_Product_Id__r.Package__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_for_backend_use__c</fullName>
        <description>This field is used to identify duplicate invoice line within an invoice header on the basis of product name and its solution.</description>
        <label>Duplicate Invoice Line Check (SystemUse)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Analysis__c</fullName>
        <label>Tax Analysis</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Equivalent_Units__c</fullName>
        <formula>Order_Product_Id__r.Total_Equivalent_Units__c</formula>
        <label>Total Equivalent Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Allowance__c</fullName>
        <label>Usage Allowance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Invoice_Line_Total__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Contract_Number_From_Invoice_Header__c</columns>
        <columns>Contract_Line_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Invoice_Line_based_on_Invoice_Header</fullName>
        <columns>NAME</columns>
        <columns>Order_Line_Item__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Contract_Line_Price__c</columns>
        <columns>Discount_Amount__c</columns>
        <columns>Invoice_Line_Total__c</columns>
        <columns>Sales_Type__c</columns>
        <columns>Solution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Invoice Line based on Invoice Header</label>
    </listViews>
    <nameField>
        <displayFormat>CIL{0000000}</displayFormat>
        <label>Invoice Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Currency_Should_Match_Invoice_H_Currency</fullName>
        <active>true</active>
        <description>Invoice Line currency must be same as related Invoice header currency.</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
NOT(TEXT(CurrencyIsoCode) = TEXT(  Invoice_Header_ID__r.CurrencyIsoCode )),
false)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Invoice Line currency must be same as related Invoice header currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_cannot_be_more_than_100</fullName>
        <active>true</active>
        <description>The % Discounted cannot hold the value more than 100%
Throw error if it is more than 100%</description>
        <errorConditionFormula>AND
( OR
(
(
Invoice_Line_Total__c &lt;&gt; 0
),
(
Invoice_Line_Total__c != NULL
)

)
, ((IF(ISNULL(Quantity__c ), Order_Product_Id__r.Quantity ,Quantity__c )*IF(OR((Price__c =0 ),ISNULL(Price__c)),Contract_Line_Price__c / Order_Product_Id__r.Quantity ,Price__c ))- Discount_Amount__c ) &lt;0,
IF(ISNULL(Quantity__c ), Order_Product_Id__r.Quantity ,Quantity__c )*IF(OR((Price__c =0 ),ISNULL(Price__c)),Contract_Line_Price__c / Order_Product_Id__r.Quantity ,Price__c )&gt;0)</errorConditionFormula>
        <errorMessage>Discount percentage offered cannot be more than 100%, please check the Discount Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Month_Format_Check</fullName>
        <active>false</active>
        <description>This rule ensures that Month is entered in the format &quot;yyyymm&quot;. This is made inactive on 24 Oct 2017 for SSE-5399</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
!REGEX( Month__c, &quot;((19|20)\\d\\d)(0?[1-9]|1[012])&quot;),
false)</errorConditionFormula>
        <errorDisplayField>Month__c</errorDisplayField>
        <errorMessage>Format of the month should be &quot;yyyymm&quot;</errorMessage>
    </validationRules>
</CustomObject>